// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormDisplay should render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="ui form"
      >
        <div
          class="ui error message"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              Please check the form for the following
            </div>
            <ul
              class="list"
            />
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="ui form"
    >
      <div
        class="ui error message"
      >
        <div
          class="content"
        >
          <div
            class="header"
          >
            Please check the form for the following
          </div>
          <ul
            class="list"
          />
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FormDisplay should render with all the units 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="ui form"
      >
        <div
          class="ui error message"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              Please check the form for the following
            </div>
            <ul
              class="list"
            />
          </div>
        </div>
        <div
          class="required field"
        >
          <label>
            Date
          </label>
          <div
            class="ui fluid left icon input"
          >
            <input
              type="text"
              value=""
            />
            <i
              aria-hidden="true"
              class="calendar icon"
            />
          </div>
        </div>
        <div
          class="required field"
        >
          <label>
            Name
          </label>
          <div
            class="ui input"
            field_name="Name"
            validators="[object Object]"
          >
            <input
              aria-invalid="true"
              name="name"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="required field"
        >
          <label>
            TextArea
          </label>
          <textarea
            aria-invalid="true"
            fieldname="TextArea"
            name="textarea"
            required=""
            rows="3"
            validators="[object Object]"
          />
        </div>
        <div
          class="required field"
        >
          <label>
            Dropdown
          </label>
          <div
            aria-expanded="false"
            aria-invalid="true"
            class="ui selection dropdown"
            fieldname="Dropdown"
            name="dropdown"
            required=""
            role="listbox"
            tabindex="0"
            validators="[object Object]"
          >
            <div
              aria-atomic="true"
              aria-live="polite"
              class="text"
              role="alert"
            />
            <i
              aria-hidden="true"
              class="dropdown icon"
            />
            <div
              class="menu transition"
            >
              <div
                aria-checked="false"
                aria-selected="true"
                class="selected item"
                role="option"
                style="pointer-events: all;"
              >
                <span
                  class="text"
                >
                  Option1
                </span>
              </div>
              <div
                aria-checked="false"
                aria-selected="false"
                class="item"
                role="option"
                style="pointer-events: all;"
              >
                <span
                  class="text"
                >
                  Option2
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="required field"
        >
          <label>
            Checkbox
          </label>
        </div>
        <div
          class="field"
        >
          <div
            class="ui checkbox"
            fieldname="Checkbox"
            validators="[object Object]"
          >
            <input
              aria-invalid="true"
              class="hidden"
              name="checkbox"
              readonly=""
              tabindex="0"
              type="checkbox"
              value="1"
            />
            <label>
              Option1
            </label>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui checkbox"
            fieldname="Checkbox"
            validators="[object Object]"
          >
            <input
              aria-invalid="true"
              class="hidden"
              name="checkbox"
              readonly=""
              tabindex="0"
              type="checkbox"
              value="2"
            />
            <label>
              Option2
            </label>
          </div>
        </div>
        <div
          class="required field"
        >
          <label>
            Radio
          </label>
        </div>
        <div
          class="field"
        >
          <div
            class="ui radio checkbox"
            fieldname="Radio"
            validators="[object Object]"
          >
            <input
              aria-invalid="true"
              class="hidden"
              name="radio"
              readonly=""
              tabindex="0"
              type="radio"
              value="1"
            />
            <label>
              Option1
            </label>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui radio checkbox"
            fieldname="Radio"
            validators="[object Object]"
          >
            <input
              aria-invalid="true"
              class="hidden"
              name="radio"
              readonly=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <label>
              Option2
            </label>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui radio checkbox"
            fieldname="Radio"
            validators="[object Object]"
          >
            <input
              aria-invalid="true"
              class="hidden"
              name="radio"
              readonly=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <label>
              Option3
            </label>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="ui form"
    >
      <div
        class="ui error message"
      >
        <div
          class="content"
        >
          <div
            class="header"
          >
            Please check the form for the following
          </div>
          <ul
            class="list"
          />
        </div>
      </div>
      <div
        class="required field"
      >
        <label>
          Date
        </label>
        <div
          class="ui fluid left icon input"
        >
          <input
            type="text"
            value=""
          />
          <i
            aria-hidden="true"
            class="calendar icon"
          />
        </div>
      </div>
      <div
        class="required field"
      >
        <label>
          Name
        </label>
        <div
          class="ui input"
          field_name="Name"
          validators="[object Object]"
        >
          <input
            aria-invalid="true"
            name="name"
            required=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="required field"
      >
        <label>
          TextArea
        </label>
        <textarea
          aria-invalid="true"
          fieldname="TextArea"
          name="textarea"
          required=""
          rows="3"
          validators="[object Object]"
        />
      </div>
      <div
        class="required field"
      >
        <label>
          Dropdown
        </label>
        <div
          aria-expanded="false"
          aria-invalid="true"
          class="ui selection dropdown"
          fieldname="Dropdown"
          name="dropdown"
          required=""
          role="listbox"
          tabindex="0"
          validators="[object Object]"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            class="text"
            role="alert"
          />
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <div
              aria-checked="false"
              aria-selected="true"
              class="selected item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Option1
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Option2
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="required field"
      >
        <label>
          Checkbox
        </label>
      </div>
      <div
        class="field"
      >
        <div
          class="ui checkbox"
          fieldname="Checkbox"
          validators="[object Object]"
        >
          <input
            aria-invalid="true"
            class="hidden"
            name="checkbox"
            readonly=""
            tabindex="0"
            type="checkbox"
            value="1"
          />
          <label>
            Option1
          </label>
        </div>
      </div>
      <div
        class="field"
      >
        <div
          class="ui checkbox"
          fieldname="Checkbox"
          validators="[object Object]"
        >
          <input
            aria-invalid="true"
            class="hidden"
            name="checkbox"
            readonly=""
            tabindex="0"
            type="checkbox"
            value="2"
          />
          <label>
            Option2
          </label>
        </div>
      </div>
      <div
        class="required field"
      >
        <label>
          Radio
        </label>
      </div>
      <div
        class="field"
      >
        <div
          class="ui radio checkbox"
          fieldname="Radio"
          validators="[object Object]"
        >
          <input
            aria-invalid="true"
            class="hidden"
            name="radio"
            readonly=""
            tabindex="0"
            type="radio"
            value="1"
          />
          <label>
            Option1
          </label>
        </div>
      </div>
      <div
        class="field"
      >
        <div
          class="ui radio checkbox"
          fieldname="Radio"
          validators="[object Object]"
        >
          <input
            aria-invalid="true"
            class="hidden"
            name="radio"
            readonly=""
            tabindex="0"
            type="radio"
            value="2"
          />
          <label>
            Option2
          </label>
        </div>
      </div>
      <div
        class="field"
      >
        <div
          class="ui radio checkbox"
          fieldname="Radio"
          validators="[object Object]"
        >
          <input
            aria-invalid="true"
            class="hidden"
            name="radio"
            readonly=""
            tabindex="0"
            type="radio"
            value="3"
          />
          <label>
            Option3
          </label>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
